--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #3ee749;
+    background-color: #000;
     text-align: center;
 }
 h1{
@@ -7,8 +7,16 @@ h1{
     color: #fff;
 }
 
+#myCanvas {
+    background-color: #2a5;
+}
+
 button{
-   margin-inline-start: 10rem;
-   inline-size: 40px;
-   block-size: 40px;
+   background-color: #fff;
+   font-size: 20px;
+   padding: 5px 7px 7px 5px;
+   border: none;
+   border-radius: 5px;
+   box-shadow: 1px 1px #000;
+   cursor: pointer;
 }
